feat: add swagger documentation: - createOpening - deleteOpening - listOpening - showOpening - updateOpening
